syntax = "proto3";
option go_package = "ITUDataBase/grpc/proto";

message Bid { //Bid tager et ID, et bud, en seq et slambert timestamp
  string id = 1;
  int64 bid = 2;
  int64 timestamp = 3;
}

message Ack {
  int32 timestamp = 1;
}

message Result {
  int64 idFromHighestBidder = 1;
  int64 highestBid = 2;
  bool auctionIsOngoing = 3;
  int64 timeLeft = 4; //Kan fjernes hvis kritisk - T J
}

message Bidder {
  int32 id = 1;
  int32 timestamp = 2; //Skal timestamp gives?? -T J
}

message Empty{}

 service ITUDatabase {
  rpc PlaceBid (Bid) returns (Ack) {};
  rpc PrintStatus (Empty) returns (Result) {};
  rpc AddBidder (Bidder) returns (Empty) {};
 }
